[fix] card containers and spacing between cards

--- a/Bootstrap-Dashboard/css/styles.css
+++ b/Bootstrap-Dashboard/css/styles.css
@@ -1,10 +1,11 @@
-/* GENERAL AND DEBUG */
+/* ROOT */
 
-[class^="col"], [class^="row"] {
-  /* min-height: 100px; */
-  /* border: 1px solid white; */
+:root {
+  --header-height: = 70px;
 }
 
+
+/* GENERAL AND DEBUG */
 
 img {
   max-width: 100%;
@@ -28,20 +29,10 @@ aside {
   position: relative;
   height: calc(100vh - 70px);
   background-image: url(../assets/img/sidebar-bg.png);
-  /* filter: hue-rotate(330deg) saturate(3); */
-  /* filter: invert(12%) sepia(80%) saturate(440%) hue-rotate(168deg) brightness(98%) contrast(96%); */
+  background-color: #12283e;
   width: 10%;
   min-width: 50px;
 }
-
-/* 
-aside::before {
-  content: url(../assets/img/sidebar-bg.png);
-  width: 10%;
-  position: absolute;
-  top: 0;
-  left: 0;
-} */
 
 
 
